--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -50,7 +50,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qk9aVfwi&k=Job&j=oyh89fwQ&__jvst=Employee+Referral&__jvsd=sidjliwW&__jvsc=Twitter&bid=nSzzmMwD'>AccentCare, Inc.? Careers - Speech Language Pathologist PRN Humble TX</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qk9aVfwi&k=Job&j=oyh89fwQ&__jvst=Employee+Referral&__jvsd=sidjliwW&__jvsc=Twitter&bid=nSzzmMwD'>AccentCare, Inc.? Careers - Speech Language Pathologist PRN Humble TX</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -74,7 +74,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999698191686-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999698191686-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -98,7 +98,7 @@
 <p><span class="badge badge-light">Miami, FL</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/medsidehealthcare/jobs/prn-speech-language-pathologist-cobb-or-dekalb-county-cnf9VE9ECr6AHLaKjNoogA'>PRN Speech Language Pathologist - (Cobb or Dekalb County) #1191 job at MedSide Healthcare in Atlanta, GA, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/medsidehealthcare/jobs/prn-speech-language-pathologist-cobb-or-dekalb-county-cnf9VE9ECr6AHLaKjNoogA'>PRN Speech Language Pathologist - (Cobb or Dekalb County) #1191 job at MedSide Healthcare in Atlanta, GA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Atlanta, GAAtlanta, GA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -114,7 +114,7 @@
 <p><span class="badge badge-light">Lafayette Hill, PA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/kidscare-home-health/job/oWbM8fwL'>KidsCare Home Health Careers - Pediatric Speech and Language Pathologist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/kidscare-home-health/job/oWbM8fwL'>KidsCare Home Health Careers - Pediatric Speech and Language Pathologist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -206,7 +206,7 @@ Gadsden. Setting: SNF. Discipline: SLP-CFY. Status: Full Time?...</p>
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/valleyhealth/job/oJDgbfwx'>Valley Health Careers - Speech Pathologist (SLP) Full Time ...</a></h5> 
+<h5><a href='https://jobs.jobvite.com/valleyhealth/job/oJDgbfwx'>Valley Health Careers - Speech Pathologist (SLP) Full Time ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 4, 2019 ... Valley Health System is a not-for-profit network of hospitals, urgent cares, 
 physician practices, and services. Expanding across Virginia, West Virginia, and
@@ -224,7 +224,7 @@ physician practices, and services. Expanding across Virginia, West Virginia, and
 <p><span class="badge badge-light">Miami, FLUnited States</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<h5><a href='https://adorationhealth.applicantstack.com/x/detail/a2yon57tonru'>Speech Language Pathologist - Home Health - Dickson - PRN ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adorationhealth.applicantstack.com/x/detail/a2yon57tonru'>Speech Language Pathologist - Home Health - Dickson - PRN ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Speech Language Pathologist - Speech Therapist - SLP - ST JOB SUMMARY: A 
 Speech Language Pathologist (SLP) administers speech therapy to patients on?...</p>
@@ -257,7 +257,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://new-story-1.workable.com/j/C3C19D0FA9'>New Story - Jobs: Speech Language Pathologist - Apply online</a></h5> 
+<h5><a href='https://new-story-1.workable.com/j/C3C19D0FA9'>New Story - Jobs: Speech Language Pathologist - Apply online</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -265,7 +265,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/ctc/job/gscsj549rdacs1ktpyjur7meoo'>Cherokee County - Speech Language Pathologist | CTC Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/ctc/job/gscsj549rdacs1ktpyjur7meoo'>Cherokee County - Speech Language Pathologist | CTC Careers</a></h5> 
 <p><span class="badge badge-light">Canton, GA</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -273,7 +273,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4475902002'>Job Application for Speech Language Pathologist (SLP) - Home Health - Per Diem at BAYADA Home Health Care</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bayada/jobs/4475902002'>Job Application for Speech Language Pathologist (SLP) - Home Health - Per Diem at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Worcester</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -321,11 +321,11 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">Katy, TX</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4473701002'>Job Application for Speech Language Pathologist, SLP- Home Health at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4473701002'>Job Application for Speech Language Pathologist, SLP- Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<h5><a href='https://php.referrals.selectminds.com/jobs/speech-pathologist-41082'>SPEECH PATHOLOGIST - Premier Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://php.referrals.selectminds.com/jobs/speech-pathologist-41082'>SPEECH PATHOLOGIST - Premier Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -427,7 +427,7 @@ Speech-Pathologist Needed immediately - full time position in Garden City, from 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TheracareINC/743999696074895-speech-language-pathologist'>Theracare INC Speech Language Pathologist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TheracareINC/743999696074895-speech-language-pathologist'>Theracare INC Speech Language Pathologist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
