--- a/data-science.html
+++ b/data-science.html
@@ -111,13 +111,13 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://gatesfoundation.wd1.myworkdayjobs.com/en-US/Gates/job/Seattle-WA/Data-Scientist--People-Analytics_B013988'>Data Scientist, People Analytics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gatesfoundation.wd1.myworkdayjobs.com/en-US/Gates/job/Seattle-WA/Data-Scientist--People-Analytics_B013988'>Data Scientist, People Analytics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Design and implement data science research projects that utilize advanced 
 statistical methods, such as regression analysis and machine learning, to 
 address?...</p>
 <hr/>
-<h5><a href='https://sailpoint.wd1.myworkdayjobs.com/en-US/SailPoint/job/Headquarters-Austin-Texas-USA/Data-Science-Interns_R001995'>Data Science Interns</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sailpoint.wd1.myworkdayjobs.com/en-US/SailPoint/job/Headquarters-Austin-Texas-USA/Data-Science-Interns_R001995'>Data Science Interns</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... At SailPoint, you will work on the latest tools in Machine Learning, Big Data, 
 Cloud Computing, Graph Databases to solve challenging problems. This is a 
@@ -186,7 +186,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">San Francisco  San Francisco  San Francisco</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cardlytics/jobs/1933895'>Job Application for Associate Data Scientist at Cardlytics</a></h5> 
+<h5><a href='https://boards.greenhouse.io/cardlytics/jobs/1933895'>Job Application for Associate Data Scientist at Cardlytics</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -239,15 +239,15 @@ and?...</p>
 <p><span class="badge badge-light">New York New York  New York, New York</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698157983-data-science-marketing-science'>Omio Data Science - Marketing Science | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698157983-data-science-marketing-science'>Omio Data Science - Marketing Science | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698157428-lead-data-scientist-product-intelligence'>Omio Lead Data Scientist - Product Intelligence | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698157428-lead-data-scientist-product-intelligence'>Omio Lead Data Scientist - Product Intelligence | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ETRSearch/743999698208172-data-scientist-kuala-lumpur'>ETR Search Data Scientist - Kuala Lumpur | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ETRSearch/743999698208172-data-scientist-kuala-lumpur'>ETR Search Data Scientist - Kuala Lumpur | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Kuala Lumpur Kuala Lumpur  Kuala Lumpur Kuala Lumpur Malaysia  Malaysia Kuala Lumpur</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -313,7 +313,7 @@ CA.</p>
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=o1K29fwG&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n6gglMwe'>Freedom Financial Network Careers - Senior Data Scientist</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=o1K29fwG&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n6gglMwe'>Freedom Financial Network Careers - Senior Data Scientist</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -322,7 +322,7 @@ CA.</p>
 <p>Oct 14, 2019 ... ... to our clients and having fun doing it; You design, implement, and optimize 
 data processing workflows, using statistics and machine learning algorithms?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/aptiv-mobility/45f87031-1f01-418d-91cd-73a5f02d3cec'>Aptiv-Mobility - Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aptiv-mobility/45f87031-1f01-418d-91cd-73a5f02d3cec'>Aptiv-Mobility - Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -406,7 +406,7 @@ accordance with data protection law for the purposes described in our privacy?..
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/stridehealth/c019f01c-52aa-4ac7-802d-53fed87c4044'>Stride Health - Senior Data Scientist / Machine Learning (ML) Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/stridehealth/c019f01c-52aa-4ac7-802d-53fed87c4044'>Stride Health - Senior Data Scientist / Machine Learning (ML) Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -492,7 +492,7 @@ accordance with data protection law for the purposes described in our privacy?..
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Jersey-City/Merrill-Lynch-Wealth-Management-Data-Scientist---Jersey-City--NJ_19068542'>Merrill Lynch Wealth Management Data Scientist ? Jersey City, NJ</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Jersey-City/Merrill-Lynch-Wealth-Management-Data-Scientist---Jersey-City--NJ_19068542'>Merrill Lynch Wealth Management Data Scientist ? Jersey City, NJ</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... The Merrill Lynch Wealth Management (MLWM) Business Oversight and 
 Supervision Data Scientist Manager is responsible for coordinating efforts on the
