--- a/data-analyst.html
+++ b/data-analyst.html
@@ -183,7 +183,7 @@
 <p><span class="badge badge-light">Brisbane Sydney Canberra Melbourne</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/asana/jobs/1930601'>Job Application for Data Analyst, Revenue Growth at Asana</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/asana/jobs/1930601'>Job Application for Data Analyst, Revenue Growth at Asana</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -223,7 +223,7 @@
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ausdta.recruiterbox.com/jobs/fk037p3'>Data Analyst - APS6 at Digital Transformation Agency</a></h5> 
+<h5><a href='https://ausdta.recruiterbox.com/jobs/fk037p3'>Data Analyst - APS6 at Digital Transformation Agency</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... We are looking for a talented Data Analyst to join gov.au Observatory, to help us 
 achieve our mission to quantify user interactions with government services.</p>
@@ -280,7 +280,7 @@ wealth of?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... Apply to Data Analyst at Evite, Inc. in Los Angeles, CA.</p>
 <hr/>
-<h5><a href='https://autodata.applytojob.com/apply/aFpmVF3lGU/Data-Analyst'>Data Analyst - Autodata Solutions - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://autodata.applytojob.com/apply/aFpmVF3lGU/Data-Analyst'>Data Analyst - Autodata Solutions - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply to Data Analyst at Autodata Solutions in London, ON, Canada.</p>
 <hr/>
@@ -432,7 +432,7 @@ Data Analyst. City, Dayton. State, OH. Description. Role and Responsibility:.</p
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/careem/jobs/4496154002'>Job Application for Marketing Data Analyst at Careem</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/careem/jobs/4496154002'>Job Application for Marketing Data Analyst at Careem</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -440,7 +440,7 @@ Data Analyst. City, Dayton. State, OH. Description. Role and Responsibility:.</p
 <p><span class="badge badge-light">United States, NY, New York</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/zilingo/jobs/4494597002'>Job Application for Data Analyst at Zilingo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/zilingo/jobs/4494597002'>Job Application for Data Analyst at Zilingo</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -464,7 +464,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Santa Monica, California</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://deseretmanagement.wd1.myworkdayjobs.com/en-US/Boncom/job/SLC-Triad-Center/Data-Analyst_R2257'>Data Analyst</a></h5> 
+<h5><a href='https://deseretmanagement.wd1.myworkdayjobs.com/en-US/Boncom/job/SLC-Triad-Center/Data-Analyst_R2257'>Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 12, 2019 ... Data Analyst needed to join Boncom. Boncom is an advertising and 
 communications agency. We develop innovative and strategic campaigns both 
@@ -502,7 +502,7 @@ the storage, virtual data centre infrastructures, infrastructure and application
 Strategic Data Scientist / Chief Customer Analyst. This role reports directly to our
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/oudpbfw1'>Santander Consumer USA Careers - Compliance Data Analyst III</a></h5> 
+<h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/oudpbfw1'>Santander Consumer USA Careers - Compliance Data Analyst III</a></h5> 
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
